--- a/frontend/latencyzero_client/src/app/layout/main-layout-component/main-layout-component.html
+++ b/frontend/latencyzero_client/src/app/layout/main-layout-component/main-layout-component.html
@@ -15,6 +15,8 @@
     </button>
   </nav>
 
+  <app-home-page></app-home-page>
+
   <footer class="bg-white border-t border-slate-200 pt-16 pb-8 text-slate-600">
     <div class="max-w-7xl mx-auto px-8">
 
