--- a/frontend/latencyzero_client/src/app/auth/layout/auth-layout/auth-layout.html
+++ b/frontend/latencyzero_client/src/app/auth/layout/auth-layout/auth-layout.html
@@ -2,18 +2,18 @@
 
   <div class="flex flex-col justify-center items-center w-full lg:w-1/2 p-6 sm:p-12 relative z-10">
 
-    <div class="w-full max-w-md bg-slate-900 rounded-2xl border border-slate-100 p-8 sm:p-10">
+    <div class="w-full max-w-md bg-slate-900 rounded-2xl border border-slate-700 bg-linear-to-br from-yellow-500/30 via-slate-800/60 to-yellow-500/20 p-8 sm:p-10">
 
-      <div class="mb-8 flex justify-center lg:justify-start">
+      <div class="mb-8 flex justify-center font-serif">
         <div class="inline-flex items-center gap-2">
-          <div class="w-12 h-12 bg-slate-50 rounded-lg flex items-center justify-center shadow-sm">
+          <div class="w-12 h-12 rounded-lg flex items-center justify-center">
             <img src="assets/img/logo2.png" alt="LatencyZero Logo">
           </div>
-          <span class="text-2xl font-bold text-white">LATENCY<span class="text-yellow-400">ZERO</span></span>
+          <span class="text-2xl font-bold tracking-tight text-white">LATENCY<span class="text-yellow-500">ZERO</span></span>
         </div>
       </div>
 
-      <!-- <router-outlet></router-outlet> -->
+      <router-outlet></router-outlet>
 
     </div>
 
