--- a/frontend/latencyzero_client/src/app/auth/layout/auth-layout/auth-layout.html
+++ b/frontend/latencyzero_client/src/app/auth/layout/auth-layout/auth-layout.html
@@ -6,7 +6,7 @@
 
       <div class="mb-8 flex justify-center font-serif">
         <div class="inline-flex items-center gap-2">
-          <div class="w-12 h-12 rounded-lg flex items-center justify-center">
+          <div class="w-12 h-12 bg-slate-200 rounded-lg flex items-center justify-center">
             <img src="assets/img/logo2.png" alt="LatencyZero Logo">
           </div>
           <span class="text-2xl font-bold tracking-tight text-white">LATENCY<span class="text-yellow-500">ZERO</span></span>
@@ -25,7 +25,7 @@
   <div class="hidden lg:flex lg:w-1/2 relative bg-slate-900 items-center justify-center overflow-hidden">
 
     <img
-      src="https://images.unsplash.com/photo-1497215728101-856f4ea42174?q=80&w=2070&auto=format&fit=crop"
+      src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2070&auto=format&fit=crop"
       alt="Fondo decorativo"
       class="absolute inset-0 w-full h-full object-cover opacity-80 mix-blend-luminosity"
     />
