--- a/frontend/latencyzero_client/src/app/auth/pages/login-page/login-page.html
+++ b/frontend/latencyzero_client/src/app/auth/pages/login-page/login-page.html
@@ -1,5 +1,5 @@
-<div class="mb-8">
-  <h1 class="text-2xl text-white mb-2">Bienvenido de nuevo</h1>
+<div class="mb-6">
+  <h1 class="text-2xl text-white mb-1">Bienvenido de nuevo</h1>
   <p class="text-slate-400 text-sm">Accede a tu cuenta para continuar</p>
 </div>
 
@@ -18,7 +18,7 @@
         </svg>
       </div>
       <input type="email" placeholder="tu@correo.com"
-        class="w-full pl-11 pr-4 py-3 bg-slate-900/50 border border-slate-600 rounded-xl text-slate-50 placeholder-slate-600 group__input">
+        class="w-full pl-11 pr-4 py-3 bg-slate-900/50 border border-slate-600 rounded-xl text-slate-50 placeholder-slate-600 outline-none focus:border-yellow-400 transition-colors">
     </div>
   </div>
 
@@ -27,7 +27,7 @@
       <label class="block text-xs font-semibold text-slate-400 uppercase">
         Contraseña
       </label>
-      <a href="#" class="text-sm font-medium text-yellow-500 hover:text-yellow-400 transition-colors">
+      <a href="#" class="text-xs font-medium text-yellow-500 hover:text-yellow-400 transition-colors">
         ¿Olvidaste tu contraseña?
       </a>
     </div>
@@ -40,10 +40,10 @@
         </svg>
       </div>
       <input type="password" placeholder="••••••••"
-        class="w-full pl-11 pr-12 py-3 bg-slate-900/50 border border-slate-600 rounded-xl text-slate-50 placeholder-slate-600 group__input">
+        class="w-full pl-11 pr-12 py-3 bg-slate-900/50 border border-slate-600 rounded-xl text-slate-50 placeholder-slate-600 outline-none focus:border-yellow-400 transition-colors">
       <button type="button"
         class="absolute inset-y-0 right-0 pr-4 flex items-center text-slate-500 hover:text-slate-300 transition-colors">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 cursor-pointer" viewBox="0 0 24 24" fill="none" stroke="currentColor"
           stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"></path>
           <circle cx="12" cy="12" r="3"></circle>
@@ -53,7 +53,7 @@
   </div>
 
   <button type="submit"
-    class="w-full flex justify-center items-center gap-2 py-3.5 px-4 bg-yellow-500 hover:bg-yellow-400 font-semibold text-slate-950 font-serif rounded-xl transition-all">
+    class="w-full flex justify-center items-center gap-2 py-3.5 px-4 bg-yellow-500 hover:bg-yellow-400 hover:shadow-2xl font-semibold text-slate-950 font-serif rounded-xl transition-all cursor-pointer">
     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor"
       stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
       <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"></path>
