--- a/frontend/latencyzero_client/src/app/auth/pages/login-page/login-page.html
+++ b/frontend/latencyzero_client/src/app/auth/pages/login-page/login-page.html
@@ -3,11 +3,11 @@
   <p class="text-slate-400 text-sm">Accede a tu cuenta para continuar</p>
 </div>
 
-<form class="space-y-6" autocomplete="off">
+<form class="space-y-6" autocomplete="off" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
   <div>
     <label class="block text-xs font-semibold text-slate-400 uppercase mb-2">
-      Correo electrónico
+      Nombre de usuario
     </label>
     <div class="relative">
       <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none text-slate-500">
@@ -17,8 +17,9 @@
           <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
         </svg>
       </div>
-      <input type="email" placeholder="tu@correo.com"
-        class="w-full pl-11 pr-4 py-3 bg-slate-900/50 border border-slate-600 rounded-xl text-slate-50 placeholder-slate-600 outline-none focus:border-yellow-400 transition-colors">
+      <input type="text" id="username" placeholder="Nombre de usuario"
+        class="w-full pl-11 pr-4 py-3 bg-slate-900/50 border border-slate-600 rounded-xl text-slate-50 placeholder-slate-600 outline-none focus:border-yellow-400 transition-colors"
+        formControlName="username">
     </div>
   </div>
 
@@ -39,8 +40,9 @@
           <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
         </svg>
       </div>
-      <input type="password" placeholder="••••••••"
-        class="w-full pl-11 pr-12 py-3 bg-slate-900/50 border border-slate-600 rounded-xl text-slate-50 placeholder-slate-600 outline-none focus:border-yellow-400 transition-colors">
+      <input type="password" id="password" placeholder="••••••••"
+        class="w-full pl-11 pr-12 py-3 bg-slate-900/50 border border-slate-600 rounded-xl text-slate-50 placeholder-slate-600 outline-none focus:border-yellow-400 transition-colors"
+        formControlName="password">
       <button type="button"
         class="absolute inset-y-0 right-0 pr-4 flex items-center text-slate-500 hover:text-slate-300 transition-colors">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 cursor-pointer" viewBox="0 0 24 24" fill="none" stroke="currentColor"
