--- a/frontend/latencyzero_client/src/app/auth/layout/auth-layout/auth-layout.html
+++ b/frontend/latencyzero_client/src/app/auth/layout/auth-layout/auth-layout.html
@@ -1,30 +1,27 @@
 <div class="min-h-screen flex bg-slate-950 w-full text-slate-50">
+  <div class="flex flex-col items-center w-full lg:w-1/2 p-6 sm:p-12 relative z-10 min-h-screen">
 
-  <div class="flex flex-col justify-center items-center w-full lg:w-1/2 p-6 sm:p-12 relative z-10">
-
-    <a
-      routerLink="/"
-      class="absolute top-6 left-6 sm:top-8 sm:left-8 flex items-center gap-2 text-sm font-medium text-slate-400 hover:text-yellow-500 transition-colors group cursor-pointer"
-    >
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5 transition-transform group-hover:-translate-x-1">
+    <a routerLink="/"
+      class="self-start mb-8 flex items-center gap-2 text-sm font-medium text-slate-400 hover:text-yellow-500 transition-colors group cursor-pointer">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+        class="w-5 h-5 transition-transform group-hover:-translate-x-1">
         <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
       </svg>
       Volver al inicio
     </a>
 
-    <div class="w-full max-w-md bg-slate-900 rounded-2xl border border-slate-700 bg-linear-to-br from-yellow-500/30 via-slate-800/60 to-yellow-500/20 p-8 sm:p-10">
-
-      <div class="mb-8 flex justify-center font-serif">
-        <div class="inline-flex items-center gap-2">
-          <div class="w-12 h-12 bg-slate-200 rounded-lg flex items-center justify-center">
-            <img src="assets/img/logo2.png" alt="LatencyZero Logo">
+    <div class="flex-1 flex flex-col justify-center w-full max-w-md">
+      <div
+        class="w-full bg-slate-900 rounded-2xl border border-slate-700 bg-linear-to-br from-yellow-500/30 via-slate-800/60 to-yellow-500/20 p-8 sm:p-10">
+        <div class="mb-8 flex justify-center items-center gap-2 font-serif">
+          <div class="w-12 h-12">
+            <img src="assets/img/logo2_yellow.png" alt="LatencyZero Logo">
           </div>
-          <span class="text-2xl font-bold tracking-tight text-white">LATENCY<span class="text-yellow-500">ZERO</span></span>
+          <span class="text-2xl font-bold tracking-tight text-white">LATENCY<span
+              class="text-yellow-500">ZERO</span></span>
         </div>
+        <router-outlet></router-outlet>
       </div>
-
-      <router-outlet></router-outlet>
-
     </div>
 
     <div class="mt-8 text-center text-sm text-slate-400">
@@ -34,13 +31,11 @@
 
   <div class="hidden lg:flex lg:w-1/2 relative bg-slate-900 items-center justify-center overflow-hidden">
 
-    <img
-      src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2070&auto=format&fit=crop"
-      alt="Fondo decorativo"
-      class="absolute inset-0 w-full h-full object-cover opacity-80 mix-blend-luminosity"
-    />
+    <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2070&auto=format&fit=crop"
+      alt="Fondo decorativo" class="absolute inset-0 w-full h-full object-cover opacity-80 mix-blend-luminosity" />
 
     <div class="absolute inset-0 bg-linear-to-br from-slate-900/90 via-slate-800/60 to-yellow-500/20"></div>
 
   </div>
+
 </div>
