--- a/frontend/latencyzero_client/src/app/auth/pages/login-page/login-page.html
+++ b/frontend/latencyzero_client/src/app/auth/pages/login-page/login-page.html
@@ -89,7 +89,7 @@
 <!-- Register link -->
 <p class="mt-8 text-sm text-center text-slate-400">
   ¿No tienes cuenta?
-  <a href="#" class="font-medium text-yellow-500 hover:text-yellow-400 transition-colors">
+  <a routerLink="/auth/register" class="font-medium text-yellow-500 hover:text-yellow-400 transition-colors cursor-pointer">
     Créala gratis
   </a>
 </p>
