feat: enhance login functionality with email validation and dynamic icon display

--- a/frontend/latencyzero_client/src/app/auth/pages/login-page/login-page.html
+++ b/frontend/latencyzero_client/src/app/auth/pages/login-page/login-page.html
@@ -9,11 +9,21 @@
   <div>
     <div class="relative">
       <div class="absolute inset-y-0 left-0 flex items-center pl-4 text-slate-500 pointer-events-none">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-          stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <rect width="20" height="16" x="2" y="4" rx="2"></rect>
-          <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
-        </svg>
+        @if (isEmail) {
+          <!-- Email icon -->
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+            <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+          </svg>
+        } @else {
+          <!-- User icon -->
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="8" r="4"></circle>
+            <path d="M4 20c0-4 3.6-7 8-7s8 3 8 7"></path>
+          </svg>
+        }
       </div>
       <input type="text" id="username" placeholder=" "
         [class]="formUtils.isValidField(loginForm, 'username') ? 'border-red-600' : 'border-slate-600'"
