--- a/frontend/latencyzero_client/src/app/features/hardvision/components/analysis-result/analysis-result.component.html
+++ b/frontend/latencyzero_client/src/app/features/hardvision/components/analysis-result/analysis-result.component.html
@@ -22,7 +22,7 @@
     <!-- RESULTADO PRINCIPAL -->
     <div class="border-b border-slate-800 pb-8">
       <h2 class="text-2xl md:text-3xl font-bold text-yellow-500 tracking-tight">
-        {{ result.predicted_label_es || result.predicted_label }}
+        {{ getPrettyLabel(result.predicted_label) }}
       </h2>
 
       <div class="flex flex-wrap items-center gap-6 mt-4 text-sm text-slate-400">
@@ -97,7 +97,7 @@
         <div *ngFor="let item of result.confidences | keyvalue">
           <div class="flex justify-between text-sm mb-2">
             <span class="text-slate-400">
-              {{ item.key }}
+              {{ getPrettyLabel(item.key) }}
             </span>
             <span class="text-yellow-500 font-semibold">
               {{ item.value * 100 | number: '1.0-1' }}%
