style: change text

--- a/frontend/latencyzero_client/src/app/features/hardvision/pages/hard-vision-page/hard-vision-page.html
+++ b/frontend/latencyzero_client/src/app/features/hardvision/pages/hard-vision-page/hard-vision-page.html
@@ -18,8 +18,7 @@
         Análisis inteligente con <span class="text-yellow-500">HardVision AI</span>
       </h1>
       <p class="text-slate-400 text-sm sm:text-base">
-        Detecta automáticamente componentes de hardware, marcas y especificaciones técnicas usando
-        visión artificial avanzada.
+        Reconocimiento automático de hardware mediante visión artificial avanzada.
       </p>
     </header>
 
